--- a/domain.yml
+++ b/domain.yml
@@ -1,52 +1,30 @@
 version: '2.0'
-config:
-  store_entities_as_slots: true
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
-- greet:
-    use_entities: true
-- exist:
-    use_entities: true
-- fin:
-    use_entities: true
-- descrip:
-    use_entities: true
-- inform:
-    use_entities: true
-- subscribe:
-    use_entities: true
-- ref_produit:
-    use_entities: true
-- command:
-    use_entities: true
-- nom_client:
-    use_entities: true
-- adresse:
-    use_entities: true
-- tel:
-    use_entities: true
-- ask_livraison:
-    use_entities: true
-- ask_retour:
-    use_entities: true
-- code_cmd:
-    use_entities: true
-- ask_general:
-    use_entities: true
-- ask_local:
-    use_entities: true
-- incomp:
-    use_entities: true
-- ask_id:
-    use_entities: true
-- lang:
-    use_entities: true
-- dispo:
-    use_entities: true
-- service_client:
-    use_entities: true
+- greet
+- exist
+- fin
+- descrip
+- inform
+- subscribe
+- ref_produit
+- command
+- nom_client
+- adresse
+- tel
+- ask_livraison
+- ask_retour
+- code_cmd
+- ask_general
+- ask_local
+- incomp
+- ask_id
+- lang
+- dispo
+- service_client
+- utter_response
 entities:
 - produit
 - sku
@@ -56,34 +34,22 @@ entities:
 - adres
 slots:
   sku:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
+    type: text
     influence_conversation: true
   produit:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
+    type: text
     influence_conversation: true
   tel:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
+    type: text
     influence_conversation: true
   name:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
+    type: text
     influence_conversation: true
   adres:
-    type: rasa.shared.core.slots.TextSlot
-    initial_value: null
-    auto_fill: true
+    type: text
     influence_conversation: true
   requested_slot:
-    type: rasa.shared.core.slots.UnfeaturizedSlot
-    initial_value: null
-    auto_fill: true
+    type: unfeaturized
     influence_conversation: false
 responses:
   utter_greet:
@@ -174,4 +140,3 @@ forms:
       tel:
       - entity: tel
         type: from_entity
-e2e_actions: []
